[tool.poetry]
name = "save_to_clickhouse_3"
version = "0.1.0"
description = ""
authors = ["Lukas Kellerstein <lukas.kellerstein@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
apache-airflow = "^2.0.1"
clickhouse_driver = "^0.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
rope = "^0.18.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
